# factor-engine

./: .gitignore  .tmp_codex_patch.txt  .tmp_patch_nobom.txt  README.md  expressions.yaml  pyproject.toml  tmp_apply_stderr.txt
.ai_state/: README.md  current.yaml
artifacts/: README.md
benchmarks/: README.md  baseline.md  history.csv  latest_run.json  profile.md  segmented_spec_gate.md  stage_lifecycle.md
data/: README.md
docs/: README.md  benchmark.md  dag_cse.md  design.md  documentation_policy.md  errors.md  execution_planner_v2.md  execution_planner_v3.md  execution_planner_v4.md  execution_planner_v5.md  execution_planning_optimization.md  functions.md  index.md  language.md  native_positional_kernel.md  operator_addition_guide.md  ordered_boundary_rules.md  ordered_correctness_audit.md  ordered_roots_matrix.md  performance_memory_self_audit.md  revolution.md  stage_lifecycle.md  workflow.md
examples/: benchmark.py  benchmark_m1_memory_model.py  benchmark_m2_5_lifecycle_freeze.py  benchmark_m3_auto_pipeline.py  benchmark_positional_phases.py  benchmark_positional_rolling.py  benchmark_r4_executor_reuse.py  benchmark_real_workload.py  benchmark_segmented.py  benchmark_segmented_spec_gate.py  benchmark_segmented_workload.py  benchmark_stage_lifecycle.py  benchmark_stage_lifecycle_real_smoke.py  demo.py  file_batch_workflow.py  macd_ema_dsl_example.py  realtime_runtime_demo.py  test_real_data.py
outputs/: README.md
scripts/: README.md
tests/: README.md  test_ast.py  test_dag_cse.py  test_engine_new_functions.py  test_executor.py  test_fft_engine.py  (+12 more)
(+4565 files in other folders)
